[gd_scene load_steps=13 format=3 uid="uid://cp7ux8st83ibh"]

[ext_resource type="Texture2D" uid="uid://bxf60cwr2h0w1" path="res://Backgrounds/purple.png" id="1_3t8c4"]
[ext_resource type="Script" path="res://level.gd" id="1_4451k"]
[ext_resource type="PackedScene" uid="uid://bgnmpeheqqsj3" path="res://player.tscn" id="2_85laa"]
[ext_resource type="Script" path="res://timer.gd" id="4_7yase"]
[ext_resource type="Texture2D" uid="uid://cc7h1ibahrpti" path="res://PNG/Effects/star1.png" id="4_ywj5q"]
[ext_resource type="Texture2D" uid="uid://ch4vj4gomgq3v" path="res://PNG/Effects/star2.png" id="5_lp5ik"]
[ext_resource type="Texture2D" uid="uid://k7kx3suqs85v" path="res://PNG/Effects/star3.png" id="6_1x2w7"]
[ext_resource type="PackedScene" uid="uid://cvkbl8vjwcqik" path="res://UI.tscn" id="8_4a7t6"]
[ext_resource type="AudioStream" uid="uid://cdtsad8ay2vn" path="res://Bonus/sfx_shieldDown.ogg" id="9_sc83m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p18bt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ywj5q")
}, {
"duration": 1.0,
"texture": ExtResource("5_lp5ik")
}, {
"duration": 1.0,
"texture": ExtResource("6_1x2w7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3p6yf"]
size = Vector2(130.75, 725)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qp1d"]
size = Vector2(1311, 20)

[node name="Level" type="Node2D"]
script = ExtResource("1_4451k")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(640, 361)
scale = Vector2(5, 2.82031)
texture = ExtResource("1_3t8c4")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_85laa")]
position = Vector2(181, 235)

[node name="Stars" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D13" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="AnimatedSprite2D14" type="AnimatedSprite2D" parent="Stars"]
sprite_frames = SubResource("SpriteFrames_p18bt")
autoplay = "default"
frame = 1
frame_progress = 0.180041

[node name="Borders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(-58, 361)
shape = SubResource("RectangleShape2D_3p6yf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(1334, 361)
shape = SubResource("RectangleShape2D_3p6yf")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(634, 0)
shape = SubResource("RectangleShape2D_7qp1d")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(634, 722)
shape = SubResource("RectangleShape2D_7qp1d")

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true
script = ExtResource("4_7yase")

[node name="Meteors" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Lasers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="LaserTimer" type="Timer" parent="."]
autostart = true

[node name="UI" parent="." instance=ExtResource("8_4a7t6")]

[node name="damageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_sc83m")

[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="timeout" from="MeteorTimer" to="." method="_on_meteor_timer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
